# dgal

./: .gitignore  CMakeLists.txt  LICENSE  README.md  geometry.hpp  geometry_binding.cpp  geometry_grad.hpp
test/: test_geometry.py
